--- a/style.css
+++ b/style.css
@@ -149,3 +149,12 @@ h1 {
   background-color: black;
   color: gray;
 }
+
+#stealthDisplay:after, #shelfDisplay:after {
+  padding-left: 5px;
+  content: '?';
+  font-size: 8px;
+  text-decoration: underline;
+  cursor: help;
+}
+
